# umap

./: .gitignore  LICENSE  README.md  go.mod  go.sum  init_test.go  python_comparison_test.go  umap.go  umap_test.go
.github/workflows/: ci.yaml
cmd/umap/: main.go
distance/: binary.go  cosine.go  distance.go  distance_test.go  euclidean.go  special.go
graph/: fuzzy.go  fuzzy_test.go
init/: spectral.go
internal/heap/: maxheap.go
internal/math/: math32.go
internal/parallel/: parallel.go
internal/rand/: mt19937.go  mt19937_test.go  tau.go
layout/: optimize.go  optimize_test.go
nn/: nndescent.go  nndescent_test.go  rptree.go
testdata/: test_data.csv
testdata/python/: debug_umap.py  debug_umap_detailed.py  pyproject.toml  run_umap.py  trace_sgd.py
